[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/windows/w_door_panel.gd" type="Script" id=1]
[ext_resource path="res://ui/dia_screens/dai_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/windows/cursorLayer.tscn" type="PackedScene" id=4]

[node name="door_panel_interior" type="Panel"]
margin_right = 160.0
margin_bottom = 240.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
color_locked = Color( 1, 0.423529, 0, 1 )
color_unlocked = Color( 0, 1, 0.976471, 1 )

[node name="cursorLayer" parent="." instance=ExtResource( 4 )]

[node name="box" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="box"]
margin_right = 150.0
margin_bottom = 32.0
text = "Door Name"

[node name="HBoxContainer" type="HBoxContainer" parent="box"]
margin_top = 36.0
margin_right = 150.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="box/HBoxContainer"]
margin_top = 4.0
margin_right = 66.0
margin_bottom = 36.0
text = "Lights"

[node name="lights" type="CheckButton" parent="box/HBoxContainer"]
margin_left = 70.0
margin_right = 146.0
margin_bottom = 40.0

[node name="spacer" type="Control" parent="box"]
margin_top = 80.0
margin_right = 150.0
margin_bottom = 152.0
size_flags_vertical = 3

[node name="locked" type="Label" parent="box"]
margin_top = 156.0
margin_right = 150.0
margin_bottom = 188.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LOCKED"

[node name="Button" type="Button" parent="box"]
margin_top = 192.0
margin_right = 150.0
margin_bottom = 230.0
text = "UNLOCK"

[connection signal="toggled" from="box/HBoxContainer/lights" to="." method="_on_lights_toggled"]
[connection signal="pressed" from="box/Button" to="." method="_on_Button_pressed"]
