[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/windows/pin.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/windows/w_door_panel.gd" type="Script" id=2]
[ext_resource path="res://ui/dia_screens/dai_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/windows/cursorLayer.tscn" type="PackedScene" id=4]

[node name="w_door_panel_pin" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -864.0
margin_bottom = -360.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="box"]
margin_right = 60.0
margin_bottom = 32.0
text = "Room"

[node name="pin_pad" parent="." instance=ExtResource( 1 )]
margin_left = 5.0
margin_top = 36.0
margin_right = -5.0
margin_bottom = -5.0

[node name="cursorLayer" parent="." instance=ExtResource( 4 )]
[connection signal="pin_approved" from="pin_pad" to="." method="toggle_lock"]
